--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,18 +8,21 @@
     <fragment
         android:id="@+id/navigation_home"
         android:name="com.example.memcardpro.ui.home.HomeFragment"
+        android:background="@color/white"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="com.example.memcardpro.ui.dashboard.DashboardFragment"
+        android:background="@color/white"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.example.memcardpro.ui.notifications.NotificationsFragment"
+        android:background="@color/white"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
