--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
+    android:background="?android:attr/colorEdgeEffect"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="?attr/actionBarSize">
@@ -12,12 +13,34 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
+        android:background="?android:attr/colorEdgeEffect"
         android:layout_marginEnd="0dp"
-        android:background="?android:attr/windowBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/bottom_nav_menu" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <View
+                android:id="@+id/tabbar"
+                android:layout_width="672dp"
+                android:layout_height="277dp"
+                android:layout_marginLeft="-4098dp"
+                android:layout_marginTop="2991dp"
+                tools:ignore="MissingConstraints" />
+
+            <!-- Rest of your layout -->
+
+        </RelativeLayout>
+
+
 
     <fragment
         android:id="@+id/nav_host_fragment_activity_main"
@@ -25,6 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toTopOf="@id/nav_view"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -37,9 +61,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:iconifiedByDefault="false"
+        android:background="@android:color/transparent"
         android:queryHint="Search..."
-        tools:ignore="MissingConstraints">
-    </SearchView>
+        tools:ignore="MissingConstraints"></SearchView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
