--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,15 +2,15 @@
     <!-- Base application theme. -->
     <style name="Theme.MemCardPro" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">?android:attr/statusBarColor</item>
+        <item name="colorPrimaryVariant">?android:attr/colorEdgeEffect</item>
+        <item name="colorOnPrimary">?android:attr/colorEdgeEffect</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@android:color/system_accent2_900</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
